<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:paddingStart="13dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvItemType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_medium"
            android:text="@string/date_"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvBranch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_medium"
            android:text="@string/branch"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvBarcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_medium"
            android:text="@string/barcode"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvCallNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textview_medium"
            android:text="@string/call_number"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_weight="1"/>

    </LinearLayout>
</layout>