<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:paddingBottom="@dimen/_20sdp"
        tools:context=".module.forgot.ForgotFragment">

        <View
            android:id="@+id/view"
            android:layout_width="160dp"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvForgotPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            style="@style/textview_title"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:fontFamily="@font/roboto_black"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvForgotPasswordDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_detail"
            android:textSize="12sp"
            style="@style/textview"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordDetail" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etMobile"
            style="@style/edittext"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_background"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvOr" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/submit"
            android:background="@drawable/button_background"
            style="@style/button"
            app:layout_constraintEnd_toEndOf="@id/etMobile"
            app:layout_constraintStart_toStartOf="@+id/etMobile"
            app:layout_constraintTop_toBottomOf="@+id/etMobile" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/skip"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/text_hyperlink_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>