<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
            tools:context=".module.registration.RegistrationPersonalActivity">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                style="@style/textview_regular"
                android:textSize="24sp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="137dp"/>

            <EditText
                android:id="@+id/etFirstName"
                style="@style/edittext"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/first_name"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <EditText
                android:id="@+id/etLastName"
                style="@style/edittext"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/last_name"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

            <EditText
                android:id="@+id/etDOB"
                style="@style/edittext"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/dob"
                android:maxLines="1"
                android:paddingEnd="15dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableRight="@drawable/ic_calendar"
                app:layout_constraintTop_toBottomOf="@+id/etLastName" />

            <EditText
                android:id="@+id/etAddress"
                style="@style/edittext"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/address"
                app:layout_constraintTop_toBottomOf="@+id/etDOB" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/etAddress"
                app:layout_constraintEnd_toEndOf="@id/etAddress"
                app:layout_constraintTop_toBottomOf="@+id/etAddress">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:value="M"
                    style="@style/textview" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:value="F"
                    style="@style/textview"
                    android:layout_marginStart="40dp" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:value="O"
                    style="@style/textview"
                    android:layout_marginStart="40dp" />

            </RadioGroup>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/create_account"
                android:background="@drawable/button_background"
                style="@style/button"
                app:layout_constraintEnd_toEndOf="@id/rgGender"
                app:layout_constraintStart_toStartOf="@+id/rgGender"
                app:layout_constraintTop_toBottomOf="@+id/rgGender" />

            <TextView
                android:id="@+id/tvDontHave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_color_secondary"
                style="@style/textview"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                app:layout_constraintEnd_toStartOf="@+id/tvLogin"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="664dp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/text_hyperlink_color"
                style="@style/textview"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvDontHave"
                tools:layout_editor_absoluteY="664dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

</layout>