<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".module.my_account.discharge.DischargeFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/what_is_a_discharge"
            style="@style/textview_bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvDescription"
            style="@style/textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/discharge_description"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvDescriptionWarning"
            style="@style/textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/discharge_description_warning"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/tvAskForDischarge"
            style="@style/textview"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/margin_start"
            android:background="@drawable/shape_button_background"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/ask_for_a_discharge"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvDescriptionWarning"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionWarning" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>