<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_20sdp"
        tools:context=".module.reset_password.ResetPasswordFragment">

        <View
            android:id="@+id/view"
            android:layout_width="160dp"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvForgotPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            style="@style/textview_title"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:fontFamily="@font/roboto_black"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/etNewPassword"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:hint="@string/new_password"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordTitle" />


        <EditText
            android:id="@+id/etConfirmNewPassword"
            style="@style/edittext"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_background"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/etNewPassword"
            app:layout_constraintStart_toStartOf="@+id/etNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/update_password"
            style="@style/button"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="@id/etConfirmNewPassword"
            app:layout_constraintStart_toStartOf="@+id/etConfirmNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmNewPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>