<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                style="@style/textview_medium"
                android:text="@string/are_you_sure_you_want_to_renew"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/btnNo"
                style="@style/button_border"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="35dp"
                android:background="@drawable/shape_button_with_border"
                android:layout_marginEnd="10dp"
                android:text="@string/no"
                app:layout_constraintEnd_toStartOf="@+id/btnYes"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <Button
                android:id="@+id/btnYes"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_background"
                android:text="@string/yes"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnNo"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>